--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -5,8 +5,12 @@ body {
     justify-content: center;
     align-items: center;
     padding: 30px;
+    padding-left: 15%;
+    padding-right: 15%;
     font-family: 'Cinzel', serif;
     flex-direction: column;
+    font-size: 1.2rem;
+    /* width: 60%; */
 }
 
 footer{
@@ -16,3 +20,5 @@ footer{
     width: 100%;
     text-align: center;
 }
+
+
